# fastapi-backend-course

.github/workflows/: main.yml
simple_backend/: pyproject.toml
simple_backend/src/task_tracker/: README.md  main.py
